# food-inspection-model

./: README.md  pyproject.toml
app/: app.py  functions.py
dev/: dev.ipynb
models/: model.pkl
