[tool.poetry]
name = "food-inspection-model"
version = "0.1.0"
description = ""
authors = ["papagorgio23 <jason@aisportsfirm.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.2.1"
xgboost = "^2.0.3"
scikit-learn = "^1.4.1"
matplotlib = "^3.8.3"
streamlit = "^1.32.2"
seaborn = "^0.13.2"
plotly = "^5.20.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
